--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <div class="music-player">
     <audio id="bgMusic" loop>
-        <source src="https://assets.mixkit.co/music/preview/mixkit-happy-birthday-135.mp3" type="audio/mpeg">
+        <source src="happy.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
@@ -238,4 +238,5 @@
   </script>
 </body>
 </html>
+
 
