--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --primary-color: #ffc0cb;
       --secondary-color: #fff0f5;
       --text-color: #4a4a4a;
-      --heading-color: #d63384; /* Raspberry Pink */
+      --heading-color: #d63384;
     }
 
     * {
@@ -25,7 +25,7 @@
     body {
       font-family: 'Open Sans', sans-serif;
       min-height: 100vh;
-      background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color)), 
+      background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color)),
                   url('https://www.transparenttextures.com/patterns/stardust.png');
       background-size: cover;
       background-blend-mode: soft-light;
@@ -52,8 +52,6 @@
       animation: glow 2s infinite;
     }
 
-
-
     .message {
       text-align: center;
       margin: 2rem auto;
@@ -66,18 +64,6 @@
       padding: 2rem;
       border-radius: 15px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .music-player {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 12px;
-      border-radius: 50px;
-      backdrop-filter: blur(5px);
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
     }
 
     .floating {
@@ -152,19 +138,16 @@
       <h1>Happy Birthday, My 💖</h1>
     </div>
 
-
     <div class="message">
       <div class="typewriter" id="birthdayMessage"></div>
     </div>
   </div>
 
-  <div class="music-player">
+  <!-- Audio Player (no button, plays automatically) -->
   <audio id="bgMusic" autoplay loop>
     <source src="happy.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
-  </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
@@ -173,6 +156,7 @@
 
     let index = 0;
     const messageElement = document.getElementById('birthdayMessage');
+    const audio = document.getElementById('bgMusic');
 
     function typeWriter() {
       if (index < message.length) {
@@ -183,7 +167,6 @@
     }
 
     function createFloatingElements() {
-      const elements = ['❤️', '⭐'];
       setInterval(() => {
         const element = document.createElement('div');
         const isHeart = Math.random() > 0.5;
@@ -197,18 +180,6 @@
       }, 300);
     }
 
-    const audio = document.getElementById('bgMusic');
-    function toggleMusic() {
-      if (audio.paused) {
-        audio.play().catch(function(error) {
-          console.log("Audio play failed:", error);
-          alert("Please click the music button to start playing!");
-        });
-      } else {
-        audio.pause();
-      }
-    }
-
     function shootConfetti() {
       setInterval(() => {
         confetti({
@@ -219,22 +190,23 @@
       }, 3000);
     }
 
-    // Try to play music when page loads
+    // Try to play music and start animations on load
     window.onload = () => {
-      // Try to play music automatically
       audio.play().catch(function(error) {
-        console.log("Auto-play failed:", error);
+        console.log("Autoplay blocked. Waiting for user interaction.");
       });
+
+      // Fallback: play audio on first click if autoplay is blocked
+      document.body.addEventListener('click', () => {
+        if (audio.paused) {
+          audio.play();
+        }
+      }, { once: true });
+
       typeWriter();
       createFloatingElements();
       shootConfetti();
-      document.body.addEventListener('click', () => {
-        if (audio.paused) audio.play();
-      }, { once: true });
     };
   </script>
 </body>
 </html>
-
-
-
